# ramlich

./: Cargo.toml  Dockerfile  Makefile  README.md  consumer.Dockerfile  docker-compose.yml
.github/workflows/: rust.yml
amlich/: Cargo.toml
amlich/src/: fns.rs  lib.rs
scripts/postgresql/: init.sql
src/: lib.rs  main.rs
src/amlich/: fns.rs  mod.rs
src/event_consumer/: db.rs  errors.rs  mod.rs  models.rs  request_event_handler.rs  routes.rs
src/event_consumer/sql/: get_request_event.sql  insert_request_event.sql
src/handlers/: amlich_com_proxy.rs  converters.rs  dates.rs  lunar.rs  middleware.rs  mod.rs  today.rs
src/kafka/: consumer.rs  mod.rs  producer.rs
src/models/: mod.rs
src/postres/: config.rs  mod.rs
src/requests/: mod.rs
src/responses/: mod.rs
src/unleash/: mod.rs
src/vncalendar/: mod.rs  time.rs
vncalendar/: Cargo.toml
vncalendar/src/: lib.rs  time.rs
