[workspace]
resolver = "2"
members = [
    "amlich",
    "vncalendar",
]

[package]
name = "ramlich"
version = "0.1.0"
edition = "2021"

[[bin]]
edition = "2021"
name = "apiserver"
path = "src/main.rs"

[dependencies]
chrono = "0.4.26"
amlich = { path = "amlich", version = "0.1.0" }
vncalendar = { path = "vncalendar", version = "0.1.0" }
actix-web = "4.9.0"
serde_json = "1.0.126"
serde = { version = "1.0.209", features = ["derive"] }
serde_with = "3.9.0"
env_logger = "0.11.5"