[workspace]
resolver = "2"
members = [
    "amlich",
    "vncalendar",
]

[package]
name = "ramlich"
version = "0.1.0"
edition = "2021"

[[bin]]
edition = "2021"
name = "apiserver"
path = "src/main.rs"

[dependencies]
chrono = "0.4.26"
amlich = { path = "amlich", version = "0.1.0" }
vncalendar = { path = "vncalendar", version = "0.1.0" }
actix-web = "4.9.0"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
serde_with = "3.9.0"
env_logger = "0.11.5"
log = "0.4.22"
utoipa = "4.2.3"
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
rdkafka = "0.36.2"
uuid = { version = "1.10.0", features = ["v4"] }
once_cell = "1.19.0"

[dev-dependencies]
mockall = "0.13.0"