[workspace]
resolver = "2"
members = [
    "amlich",
    "vncalendar",
]

[package]
name = "ramlich"
version = "0.1.0"
edition = "2021"

[[bin]]
edition = "2021"
name = "apiserver"
path = "src/bin/apiserver.rs"

[[bin]]
edition = "2021"
name = "event_consumer"
path = "src/bin/event_consumer.rs"

[dependencies]
chrono = {version = "0.4.26", features=["serde"] }
amlich = { path = "amlich", version = "0.1.0" }
vncalendar = { path = "vncalendar", version = "0.1.0" }
actix-web = "4.9.0"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
serde_with = "3.9.0"
env_logger = "0.11.5"
log = "0.4.22"
utoipa = "4.2.3"
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
rdkafka = "0.36.2"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
once_cell = "1.19.0"
confik = "0.11"
deadpool-postgres = { version = "0.14.0", features = ["serde"] }
tokio-postgres = { version = "0.7.12", features=["with-uuid-1", "with-serde_json-1", "with-chrono-0_4"]}
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.3", features = ["sync"] }
futures-util = "0.3.30"
derive_more = { version = "1.0.0", features = ["full"] }
async-trait = "0.1.83"
unleash-api-client = {version="0.11.0", features=["reqwest"]}
enum-map = "2.0.1"
reqwest = { version = "0.12.7", features = ["json", "stream"]}
futures = "0.3.30"
futures-timer = "3.0.2"
url = "2.2"
awc = { version = "3.2", features=["openssl"] }

[dev-dependencies]
mockall = "0.13.0"